# 2D-game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  setup.bat
assets/scripts/: Level1.lua  level1.lua
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Collision.cpp  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/components/: ColliderComponent.h  KeyboardControlComponent.h  LabelComponent.h  ProjectileEmitterComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
